--- a/Twitch/Bot/commands.css
+++ b/Twitch/Bot/commands.css
@@ -1,1 +1,111 @@
+Skip to content
+Search or jump to…
+Pull requests
+Issues
+Marketplace
+Explore
+ 
+@nof0xgvn 
+KuroScratch
+/
+KuroScratch.github.io
+Public
+Code
+Issues
+Pull requests
+Actions
+Projects
+Wiki
+Security
+Insights
+KuroScratch.github.io/food/food.css
+@KuroScratch
+KuroScratch Add files via upload
+Latest commit 48ed3cc on Jun 15, 2019
+ History
+ 1 contributor
+71 lines (59 sloc)  963 Bytes
+   
+@font-face {
+	font-family: "NoFutura";
+	src: url(Futura-MediumCondensed.ttf) format("truetype");
+}
 
+* {
+	margin: 0;
+	padding: 0;
+	font-family: "NoFutura";
+}
+
+header {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	background-color: black;
+	z-index: 3;
+}
+
+header p {
+	
+	font-size: 6vh;
+	color: white;
+	margin: 0;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	text-align: center;
+
+}
+
+header h1 {
+	position: relative;
+	font-size: 30vh;
+	color: white;
+	top: 40%;
+	width: 100%;
+	transform: translateY(-50%);
+	text-align: center;
+}
+
+header a {
+	position: absolute;
+	bottom: 0vh;
+	width: 100%;
+	color: white;
+	font-size: 5vh;
+	text-align: center;
+	text-decoration: none;
+}
+
+#stuff {
+	top: 100%;
+	position: absolute;
+	min-height: 100%;
+	margin-top: 10px;
+}
+
+header a:hover span {
+	text-decoration: underline;
+}
+
+p {
+	font-size: 200%;
+}
+
+a {
+	font-size: 200%;
+}
+© 2022 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
+Loading complete
