--- a/index.css
+++ b/index.css
@@ -19,12 +19,30 @@ header {
 
 header h1 {
 	position: relative;
-	font-size: 15vh;
+	font-size: 10vh;
 	color: white;
-	top: 50%;
+	top: 20%;
 	width: 100%;
-	transform: translateY(-50%);
 	text-align: center;
+}
+
+header img {
+	position: relative;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	height: 20vh;
+	top: 25%;
+	border-radius: 9999px;
+}
+
+header p {
+	position: relative;
+	color: white;
+	width: 100%;
+	font-size: 4vh;
+	text-align: center;
+	top: 30%;
 }
 
 header a {
@@ -32,7 +50,7 @@ header a {
 	bottom: 0vh;
 	width: 100%;
 	color: white;
-	font-size: 5vh;
+	font-size: 3vh;
 	text-align: center;
 	text-decoration: none;
 }
@@ -51,7 +69,6 @@ header a:hover span {
 
 p {
 	font-size: 200%;
-	padding: ;
 }
 
 a {
