--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
-@media (max-width: 799px) {
-    .hideslim {
+@media only screen and (max-width: 799px) {
+    .hide {
         display:none;
     }
 }
