--- a/index.css
+++ b/index.css
@@ -12,6 +12,10 @@ html {
 	font-family:  "Segoe UI", sans-serif;
 }
 
+body {
+	counter-reset: row; 
+}
+
 header {
 	width: 100%;
 	height: 100%;
@@ -52,7 +56,7 @@ header p {
 
 header a {
 	position: absolute;
-	bottom: .25vh;
+	bottom: 0.25vh;
 	width: 100%;
 	color: white;
 	font-size: 2.5vh;
@@ -88,22 +92,66 @@ a {
     -moz-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
-
+	align-self: end;
 	position: relative;
 	display: block;
-	margin-left: -55px;
-	height: 100%;
-	grid-area: 1 / 1 / span 7 / 1;
+	height: 80vh;
+	padding-bottom: 2vh;
+	grid-area: 1 / 1 / span 5 / 1;
 }
 
 .container {
 	display: grid;
-	grid-template-columns: max-content auto auto;
-	grid-template-rows: auto auto auto auto auto auto auto;
+	grid-template-columns: max-content max-content auto ;
+	grid-template-rows: auto auto auto auto auto;
+}
+
+.container a.socials{
+	align-self: center;
+	padding-left: 3vw;
+}
+
+.container a.socials img {
+	height: 15vmin;
+}
+
+.container a.text {
+	align-self: center;
+	padding-left: 3vw;
+	grid-column: 3;
+	color: white;
+	font-size: 3vh;
+	font-weight: 600;
+	text-align: left;
+	text-decoration: none;
+}
+
+.showM {
+	display: none;
 }
 
 @media only screen and (max-width: 799px) {
-    .hide {
-        display:none;
+    .hideS {
+        display: none;
     }
+
+	header p {
+		font-size: 3vh;
+	}
+}
+
+@media only screen and (max-width: 1200px) {
+    .showM {
+        display: initial;
+    }
+	
+	.hideM {
+        display: none;
+    }
+
+	.presenting {
+		align-self: end;
+		width: 35vh;
+		height: auto;
+	}
 }
