--- a/Twitch/Bot/commands.css
+++ b/Twitch/Bot/commands.css
@@ -1,7 +1,12 @@
+@font-face {
+	font-family: "NoFutura";
+	src: url(../../FuturaBT-MediumCondensed.otf) format("opentype");
+}
+
 * {
 	margin: 0;
 	padding: 0;
-	font-family:  "Segoe UI", sans-serif;
+	font-family: "NoFutura";
 }
 
 header {
