--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ html {
 * {
   margin: 0;
   padding: 0;
-  font-family: "Segoe UI", sans-serif;
+  font-family: "Segoe UI", Tahoma, sans-serif;
 }
 
 body {
