--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p&display=swap');
+
 html {
   scroll-behavior: smooth;
 }
@@ -9,7 +11,7 @@ html {
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Segoe UI', Arial, sans-serif;
+  font-family: 'M PLUS 1p"', 'Segoe UI', Arial, sans-serif;
 }
 
 body {
