--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@500&display=swap');
 
 html {
   scroll-behavior: smooth;
@@ -11,7 +11,7 @@ html {
 * {
   margin: 0;
   padding: 0;
-  font-family: 'M PLUS 1p"', 'Segoe UI', Arial, sans-serif;
+  font-family: 'M PLUS 1p', 'Segoe UI', Arial, sans-serif;
 }
 
 body {
