--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ html {
 * {
   margin: 0;
   padding: 0;
-  font-family: 'M PLUS 1p', 'Segoe UI', Arial, sans-serif;
+  font-family: 'Segoe UI', 'M PLUS 1p', Arial, sans-serif;
 }
 
 body {
